fix logo stretching

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -27,6 +27,7 @@ a:hover, a:focus {
 .logo {
     width: 8%;
     min-width: 90px;
+    height: auto;
 }
 
 .titlebar {
